apps/audiobookshelf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: homelab
spec:
  ingressClassName: nginx
  rules:
    - host: audiobookshelf.rizexor.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: audiobookshelf
              port:
                number: 80
